# sql-parser-library

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  build.sh  s  scaffold.yaml
examples/dbgen_test/: CMakeLists.txt
examples/dbgen_test/src/: main.c  old_queries.c
examples/example_table/: CMakeLists.txt  build.sh
examples/example_table/src/: main.c
examples/expressions/: CMakeLists.txt  build.sh
examples/expressions/samples/dates/: test_dates_comprehensive.json  test_datetime_intervals.json
examples/expressions/samples/random/: test_random_edge_cases.json  tests.json  tests4.json
examples/expressions/samples/specific/: test_advanced_features.json  test_advanced_strings.json  test_between.json  test_between2.json  test_case.json  test_case_advanced.json  test_in_notin.json  test_json_advanced.json  test_like.json  test_math_bitwise.json  test_notin2.json  test_nullif_json.json
examples/expressions/src/: main.c
examples/parse_sql/: CMakeLists.txt  parse_tests.json
examples/parse_sql/src/: main.c
include/sql-parser-library/: date_utils.h  named_pointer.h  sql_ast.h  sql_binder.h  sql_compiler.h  sql_ctx.h  sql_interval.h  sql_named_pointer.h  sql_node.h  sql_planner.h  sql_query.c  sql_query.h  sql_result_set.h  sql_tokenizer.h  sql_vm.h
include/sql-parser-library/brutezone/: timezone.h  timezone_database.h  timezone_impl.h
samples/dates/: test_dates1.json
samples/random/: tests2.json  tests3.json  tests5.json
samples/specific/: sql_arithmetic_where_tests.json  test_arithmetic.json  test_geo.json  test_not_logic.json  test_null.json  test_special.json  test_string_between.json
src/: sql_ast.c  sql_ast_to_node.c  sql_binder.c  sql_compiler.c  sql_ctx.c  sql_interval.c  sql_node.c  sql_planner.c  sql_query.c  sql_result_set.c  sql_tokenizer.c  sql_vm.c
src/brutezone/: timezone.c  timezone_impl.c
src/group_specs/: avg.c  count.c  sum.c
src/specs/: arithmetic.c  arithmetic_ext.c  avg.c  between.c  boolean.c  case_when.c  cast_convert.c  coalesce.c  comparison.c  concat.c  convert_tz.c  date_trunc.c  extract.c  geo.c  in.c  is_boolean.c  is_null.c  json_ext.c  length.c  like.c  lower_upper.c  min_max.c  now.c  nullif.c  regex.c  round.c  string_ext.c  substr.c  sum.c  trim.c
src/utils/: date_utils.c  named_pointer.c  sql_named_pointer.c
src/window_specs/: rank.c  row_number.c
tests/: CMakeLists.txt  build.sh
tests/src/: json_sql.c  sql_driver.c  sql_parser.c  sql_parser2.c
